CMR-612: Updated the collection query resolver so that collection ids found within collection queries can influence the potential collection ids that can be found.