@@ -17,12 +17,15 @@
                  [org.clojure/data.csv "0.1.2"]]
   :plugins [[lein-test-out "0.3.1"]]
   :repl-options {:init-ns user}
+  :jvm-opts ["-XX:PermSize=256m" "-XX:MaxPermSize=256m"]
   :profiles
   {:dev {:dependencies [[ring-mock "0.1.5"]
                         [org.clojure/tools.namespace "0.2.4"]
                         [org.clojars.gjahad/debug-repl "0.3.3"]
                         [criterium "0.4.3"]
-                        [pjstadig/humane-test-output "0.6.0"]]
+                        [pjstadig/humane-test-output "0.6.0"]
+                        ;; Must be listed here as metadata db depends on it.
+                        [drift "1.5.2"]]
          :source-paths ["src" "dev" "test"]
          :injections [(require 'pjstadig.humane-test-output)
                       (pjstadig.humane-test-output/activate!)]}
